# anubis-graphics-kit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake-builkd-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
splash/: artigo-rina.docx
src/: agk.cpp  agk.hpp  agk_client.cpp  agk_client.hpp  agk_starter.cpp  agk_starter.hpp
src/api/: agk_camera.cpp  agk_camera.hpp  agk_core.cpp  agk_core.hpp  agk_feature.cpp  agk_feature.hpp  agk_gpu.cpp  agk_gpu.hpp  agk_material.cpp  agk_material.hpp  agk_math.cpp  agk_math.hpp  agk_render.cpp  agk_render.hpp  agk_renderer_manager.cpp  agk_renderer_manager.hpp  agk_resource_manager.cpp  agk_resource_manager.hpp  agk_scene.cpp  agk_scene.hpp  agk_util.cpp  agk_util.hpp  api.cpp  api.hpp
src/api/asset/: asset_manager.hpp
src/api/core/: core.cpp  core.hpp  feature.hpp
src/api/event/: event.cpp  event.hpp
src/api/feature/: feature.cpp  feature.hpp
src/api/gc/: gc.cpp  gc.hpp  memory.cpp  memory.hpp
src/api/gpu/: buffer_builder.cpp  buffer_builder.hpp  buffering.cpp  buffering.hpp  program.cpp  program.hpp  shading.cpp  shading.hpp  shading_access.cpp  shading_access.hpp  tools.cpp  tools.hpp
src/api/input/: input.cpp  input.hpp
src/api/mesh/: mesh.cpp  mesh.hpp  mesh_loader.cpp  mesh_loader.hpp
src/api/profile/: profile.hpp
src/api/render/: buffer_builder.cpp  buffer_builder.hpp  geometry.hpp
src/api/renderer/: buffer_builder.cpp  buffer_builder.hpp  (+4 more)
src/asset/: asset_manager.cpp  asset_manager.hpp  assetmanager.cpp  assetmanager.hpp  mesh.cpp  mesh.hpp  mesh_loader.cpp  mesh_loader.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.hpp
src/client/: agk.cpp  agk.hpp  client.cpp  client.hpp
src/core/: core.cpp  core.hpp  imodule.cpp  imodule.hpp  value.hpp
src/event/: event.cpp  event.hpp
src/gpu/: gpu.cpp  gpu.hpp  gpu_buffer.hpp  gpu_framebuffer.hpp  gpu_programbuffer.hpp  gpu_texture.hpp  gpubase.cpp  gpubase.hpp  gpuparallel.hpp  tools.cpp  tools.hpp
src/impl/: agk.cpp  agk.hpp  agk_camera.cpp  agk_camera.hpp  agk_client.cpp  agk_client.hpp  agk_instance.cpp  agk_instance.hpp
src/mesh/: mesh.cpp  mesh.hpp  meshloader.cpp  meshloader.hpp
src/stream/: stream.cpp  stream.hpp  streamparser.cpp  streamparser.hpp
src/ui/: deviceinput.cpp  deviceinput.hpp  immshape.hpp  input.cpp  input.hpp  shape.cpp  shape.hpp  usercamera.cpp  usercamera.hpp
src/util/: env.cpp  env.hpp  event.cpp  event.hpp  file.cpp  file.hpp  math.cpp  math.hpp
src/world/: world.cpp  world.hpp
(+99 files in other folders)
